--- a/release.html
+++ b/release.html
@@ -163,7 +163,9 @@
                                     沈葆雄
                                 </td>
                                 <td data-th="標題">
-                                    <div class="over-text text-primary-xdark fw-semibold">雲林斗南土雞場確診H5N1高原病性禽流感雲林斗南土雞場確診H5N1高原病性禽流感雲林</div>
+                                    <div class="over-text text-primary-xdark fw-semibold">
+                                        <a href="search.html" class="link-primary-xdark">雲林斗南土雞場確診H5N1高原病性禽流感雲林斗南土雞場確診H5N1高原病性禽流感雲林</a>
+                                    </div>
                                 </td>
                                 <td data-th="類型">
                                     防檢署範本
@@ -186,7 +188,9 @@
                                     沈葆雄
                                 </td>
                                 <td data-th="標題">
-                                    <div class="over-text text-primary-xdark fw-semibold">雲林斗南土雞場確診H5N1高原病性禽流感雲林斗南土雞場確診H5N1高原病性禽流感</div>
+                                    <div class="over-text text-primary-xdark fw-semibold">
+                                        <a href="search.html" class="link-primary-xdark">雲林斗南土雞場確診H5N1高原病性禽流感雲林斗南土雞場確診H5N1高原病性禽流感雲林</a>
+                                    </div>
                                 </td>
                                 <td data-th="類型">
                                     防檢署範本
@@ -292,7 +296,7 @@
                                 沈葆雄
                             </td>
                             <td>
-                                <div class="over-text text-primary-xdark fw-semibold"><a href="search.html" class="link-primary-xdark">農糧署農機補助啟動加碼補助農機碼補助農糧署農機補助啟動加碼補助農機碼補助</a></div>
+                                <div class="over-text text-primary-xdark fw-semibold"><a href="search.html" class="link-primary-xdark">近期日夜溫差大發生禽流感風險仍高，請提高警覺近期日夜溫差大發生禽流感風險仍高，請提高警覺</a></div>
                             </td>
                             <td>
                                 農糧署分署範本
@@ -316,7 +320,7 @@
                                 沈葆雄
                             </td>
                             <td>
-                                <div class="over-text text-primary-xdark fw-semibold"><a href="search.html" class="link-primary-xdark">農糧署農機補助啟動加碼補助農機碼補助農糧署農機補助啟動加碼補助農機碼補助</a></div>
+                                <div class="over-text text-primary-xdark fw-semibold"><a href="search.html" class="link-primary-xdark">近期日夜溫差大發生禽流感風險仍高，請提高警覺近期日夜溫差大發生禽流感風險仍高，請提高警覺</a></div>
                             </td>
                             <td>
                                 農糧署分署範本
@@ -340,7 +344,7 @@
                                 沈葆雄
                             </td>
                             <td>
-                                <div class="over-text text-primary-xdark fw-semibold"><a href="search.html" class="link-primary-xdark">農糧署農機補助啟動加碼補助農機碼補助農糧署農機補助啟動加碼補助農機碼補助</a></div>
+                                <div class="over-text text-primary-xdark fw-semibold"><a href="search.html" class="link-primary-xdark">近期日夜溫差大發生禽流感風險仍高，請提高警覺近期日夜溫差大發生禽流感風險仍高，請提高警覺</a></div>
                             </td>
                             <td>
                                 農糧署分署範本
@@ -364,7 +368,7 @@
                                 沈葆雄
                             </td>
                             <td>
-                                <div class="over-text text-primary-xdark fw-semibold"><a href="search.html" class="link-primary-xdark">農糧署農機補助啟動加碼補助農機碼補助農糧署農機補助啟動加碼補助農機碼補助</a></div>
+                                <div class="over-text text-primary-xdark fw-semibold"><a href="search.html" class="link-primary-xdark">近期日夜溫差大發生禽流感風險仍高，請提高警覺近期日夜溫差大發生禽流感風險仍高，請提高警覺</a></div>
                             </td>
                             <td>
                                 農糧署分署範本
@@ -388,7 +392,7 @@
                                 沈葆雄
                             </td>
                             <td>
-                                <div class="over-text text-primary-xdark fw-semibold"><a href="search.html" class="link-primary-xdark">農糧署農機補助啟動加碼補助農機碼補助農糧署農機補助啟動加碼補助農機碼補助</a></div>
+                                <div class="over-text text-primary-xdark fw-semibold"><a href="search.html" class="link-primary-xdark">近期日夜溫差大發生禽流感風險仍高，請提高警覺近期日夜溫差大發生禽流感風險仍高，請提高警覺</a></div>
                             </td>
                             <td>
                                 農糧署分署範本
@@ -412,7 +416,7 @@
                                 沈葆雄
                             </td>
                             <td>
-                                <div class="over-text text-primary-xdark fw-semibold"><a href="search.html" class="link-primary-xdark">農糧署農機補助啟動加碼補助農機碼補助農糧署農機補助啟動加碼補助農機碼補助</a></div>
+                                <div class="over-text text-primary-xdark fw-semibold"><a href="search.html" class="link-primary-xdark">近期日夜溫差大發生禽流感風險仍高，請提高警覺近期日夜溫差大發生禽流感風險仍高，請提高警覺</a></div>
                             </td>
                             <td>
                                 農糧署分署範本
@@ -436,7 +440,7 @@
                                 沈葆雄
                             </td>
                             <td>
-                                <div class="over-text text-primary-xdark fw-semibold"><a href="search.html" class="link-primary-xdark">農糧署農機補助啟動加碼補助農機碼補助農糧署農機補助啟動加碼補助農機碼補助</a></div>
+                                <div class="over-text text-primary-xdark fw-semibold"><a href="search.html" class="link-primary-xdark">近期日夜溫差大發生禽流感風險仍高，請提高警覺近期日夜溫差大發生禽流感風險仍高，請提高警覺</a></div>
                             </td>
                             <td>
                                 農糧署分署範本
@@ -460,7 +464,7 @@
                                 沈葆雄
                             </td>
                             <td>
-                                <div class="over-text text-primary-xdark fw-semibold"><a href="search.html" class="link-primary-xdark">農糧署農機補助啟動加碼補助農機碼補助農糧署農機補助啟動加碼補助農機碼補助</a></div>
+                                <div class="over-text text-primary-xdark fw-semibold"><a href="search.html" class="link-primary-xdark">近期日夜溫差大發生禽流感風險仍高，請提高警覺近期日夜溫差大發生禽流感風險仍高，請提高警覺</a></div>
                             </td>
                             <td>
                                 農糧署分署範本
