--- a/login.html
+++ b/login.html
@@ -2,12 +2,12 @@
 <html lang="zh-Hant-TW">
 
 <head>
-    <title>全方位輿情管理整合平台</title>
+    <title>全方位輿情管理平台</title>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="keywords" content="全方位輿情管理整合平台,輿情管理,全方位輿情管理整合">
-    <meta name="description" content="全方位輿情管理整合平台" />
+    <meta name="keywords" content="全方位輿情管理平台,輿情管理,全方位輿情管理整合">
+    <meta name="description" content="全方位輿情管理平台" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
     <meta property="og:site_name" content="image.png" />
